--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,7 @@ pages:
     https_proxy: $CODE_PROXY
     no_proxy: .siemens.com
   script:
-    - gem install bundler
-    - bundle install
-    - bundle exec jekyll build -d public
+    - echo hello
   artifacts:
     paths:
       - public
